--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             padding: 0;
             box-sizing: border-box;
         }
+
         body {
             height: 100vh;
             background-color: rgba(48, 79, 84, 0.85);
@@ -18,48 +19,81 @@
             align-items: center;
             display: flex;
         }
-        .row{
+
+        .row {
             display: flex;
             flex-wrap: wrap;
             width: 100%;
         }
-        .main {
+
+        .hide {
+            opacity: 0;
+            visibility: hidden;
+            transform: translate(-50%, -50%) scale(0);
+        }
+
+        button {
+            width: 200px;
+            height: 80px;
+            background-color: #E37419;
+            color: #ffffff;
+            border-radius: 15px;
+            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+            font-size: 25px;
+            font-weight: bold;
+
+            &:hover {
+                background-color: #B05A13;
+            }
+        }
+
+        .pop {
             width: 790px;
             min-height: 300px;
             background-color: #ffffff;
             border-radius: 15px;
             padding: 40px;
             display: flex;
-            flex-wrap: wrap;
-            position: relative;
-            >span{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            transition: 0.4s;
+
+            .close {
                 position: absolute;
-                top: 0;right: 8px;
+                top: 0;
+                right: 8px;
                 font-size: 36px;
                 font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
                 cursor: pointer;
                 color: #3A3A3A;
             }
         }
+
         .leftColum {
             width: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            padding:5px 45px 5px 5px;
-            >*{
+            padding: 5px 45px 5px 5px;
+
+            >* {
                 width: 100%;
             }
+
             >figure {
                 align-items: center;
                 justify-content: center;
                 display: flex;
                 margin: 10px 0px 0px 0px;
-                >img{
+
+                >img {
                     width: 84px;
                 }
             }
-            >span{
+
+            >span {
                 font-family: Arial, Helvetica, sans-serif;
                 font-size: 20px;
                 font-weight: bold;
@@ -68,16 +102,17 @@
                 margin: 10px 5px 10px 5px;
                 text-align: center;
             }
-            >h2{
+
+            >h2 {
                 font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
                 color: #3A3A3A;
                 font-size: 36px;
                 font-weight: bold;
                 text-align: center;
                 margin: 15px 5px 15px 5px;
-                
             }
-            input{
+
+            input {
                 font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
                 font-size: 16px;
                 padding-left: 10px;
@@ -87,7 +122,8 @@
                 border: 1px solid #C0C0C0;
                 border-radius: 10px;
             }
-            >button{
+
+            >button {
                 font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
                 font-size: 18px;
                 background-color: #E37419;
@@ -98,19 +134,22 @@
                 margin: 15px 5px 15px 5px;
                 border-radius: 10px;
                 transition: 0.4s;
-                &:hover{
+
+                &:hover {
                     background-color: #B05A13;
                 }
             }
         }
-        .rightColum{
+
+        .rightColum {
             width: 50%;
-            background: #f5cfaf;
+            background: #f5cfafe5;
             border-radius: 15px;
             align-items: center;
             justify-content: center;
             display: flex;
-            >img{
+
+            >img {
                 width: 295px;
                 padding: 55px 0px 55px 10px;
             }
@@ -119,8 +158,9 @@
 </head>
 
 <body>
-    <div class="main row">
-        <span>x</span>
+    <button id="btn">Open Popup</button>
+    <div class="pop row hide">
+        <span class="close">x</span>
         <div class="leftColum row">
             <figure>
                 <img src="img/download.svg" alt="">
@@ -135,5 +175,18 @@
             <img src="img/Group 2_1719914098369.png" alt="">
         </div>
     </div>
+    <script>
+        const btn = document.querySelector('#btn')
+        const close = document.querySelector('.close')
+        const popup = document.querySelector('.pop')
+
+        btn.addEventListener('click', function () {
+            popup.classList.remove('hide')
+        })
+        close.addEventListener('click', function () {
+            popup.classList.add('hide')
+        })
+    </script>
 </body>
+
 </html>
